AMP-30834 fix alignment

--- a/amp/TEMPLATE/reampv2/packages/reampv2-app/src/modules/ndddashboard/medashboard/components/sections/css/Styles.module.css
+++ b/amp/TEMPLATE/reampv2/packages/reampv2-app/src/modules/ndddashboard/medashboard/components/sections/css/Styles.module.css
@@ -32,3 +32,14 @@
 .button_text {
     padding-left: 6px;
 }
+
+.line_chart_header {
+    display: flex;
+    align-items: center;
+}
+
+.line_chart_header_text {
+    display: flex;
+    align-items: center;
+    padding-top: 9px;
+}
